# songbird

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_annotations.py  0003_annotation_translations.py  0004_tags.py  0005_auth.py  0006_sermon_notes.py  0007_user_last_translation.py  0008_user_last_position.py  0009_user_theme.py
backend/songbird/: __init__.py  config.py  main.py
backend/songbird/api/: __init__.py  _tags.py  annotations.py  auth.py  concord.py  deps.py  geography.py  headings.py  health.py  import_export.py  notes.py  (+8 more)
backend/tests/: annotation_search_test.py  annotations_test.py  auth_test.py  bridge_test.py  browse_test.py  concord_client_test.py  concord_contract_test.py  concord_free_test.py  conftest.py  cookies_test.py  cross_references_test.py  default_claim_test.py  gating_test.py  geography_test.py  headings_test.py  health_test.py  helpers.py  import_export_test.py  journeys_test.py  keyword_search_test.py  live_concord_test.py  login_throttle_test.py  notes_search_test.py  notes_test.py  places_test.py  random_verse_test.py  read_overlay_test.py  resolve_test.py  scope_crud_test.py  scope_overlay_test.py  scoping_test.py  seed_sermon_notes_test.py  semantic_search_test.py  sermon_notes_test.py  session_sweep_test.py  strongs_test.py  tags_crud_test.py  tiles_serving_test.py  topics_test.py  translations_test.py
(+164 files in other folders)
